Improved performance by delaying javascript loading and changed styles to avoid flicker when javascript does modify bits after lazy-loading

--- a/trunk/framework/content/text/assets/css/text-tabs.css
+++ b/trunk/framework/content/text/assets/css/text-tabs.css
@@ -1,6 +1,6 @@
 /* The following only works on Firefox to prevent flicker */
-.text-tabs div.yui-content div {
-	display: none;
+.text-tabs {
+	visibility: hidden;
 }
 /* Remove flicker on load as per Dave Glass blog posting (does not work): http://new.davglass.com/files/yui/tab6/ */
 /*div.yui-content div {
